# Code-Snippets

./: .gitignore  README.md  clang-format  editorconfig  main.cpp  makefile
.devcontainer/: Dockerfile  devcontainer.json
C++/3rd Party Libraries/zeromq/: CMakeLists.txt  CMakePresets.json  client.cc  main.cc  server.cc
C++/CMake/: README.md
C++/CMake/Simple/src/: CMakeLists.txt  main.cpp  version.h  version_template.h
C++/Classes/: README.md
C++/Coroutines/: README.md
C++/Design Patterns/: README.md  SOLID.org
C++/Libraries/: README.md
C++/Move Semantics/: README.md
C++/Preprocessor/: DoProcess.bat  test.cpp  test.i
C++/Regular Expressions/: file.txt  main.cpp
C++/System Programming/execute_cli_cmd/: CMakeLists.txt  main.cc
C++/Windows API/: makefile  template.cpp
C++/template_cmake/: CMakeLists.txt  main.cc
C++/template_test/: code.cpp  code.h  test.cpp
Docker/: README.md
Docker/C++Toolchain/: Dockerfile  README.md
Docker/Simple/: Dockerfile
Docker/docker-compose/: README.md  docker-compose.yaml
Docker/systemd_playground/: Dockerfile.ubuntu-20.04  README.md  foo.sh
Forth/: README.md  getting_started.fs
Haskell/Getting Started/: GettingStarted.hs  OpenInteractiveMode.bat
Jenkins/: README.md  jenkinsfile
Jenkins/Simple/: Jenkinsfile
Lisp/: README.md  getting-started.cl
Markdown/: README.md
PlantUML/: README.md  class_diagram  component_diagram  mind_map_diagram  rectangles  sequence_diagram  state_diagram  timing_diagram
Python/: Getting Started.py  README.md  RegularExpressions.py  tinker_simple.py
Python/8 Queens Problem/: 8_Queens_Problem.py
Python/CLI/: cmd_line_args.py
Python/Classes/: classes.py
Python/Data Structures and Algorithms/: DataStructures.py  TraverseNestedList.py  data_classes.py  list_comprehension.py  strings.py
Python/Decorators/: decorators.py
Python/Edimax/: ON.sh  ReadMe.txt  off.xml  on.xml  output.txt  smartplug.py
Python/Files and Directories/: files_and_paths.py  read_file_content.py  walk_through_dir_recursively.py
Python/Functions/: functions.py
Python/Getting Started/: Getting Started.py  getting_started.py  references_and_copies.py  sudoku_solver.py
Python/Graphics/: cpu_values.txt  (+2 more)
Regular Expressions/: main.cpp
Rust/: README.md
Structurizr/: start_structurizr_lite.sh  workspace.dsl  workspace.json
awk/: README.md
bash/: README.md  branching.sh  cli_script_template.sh  data_structures.sh  environments.sh  error_handling.sh  file.txt  files.sh  functions.sh  json_parsing.sh  loops.sh  math.sh  output.sh  output.txt  replace_regex.sh  shunit2_tests.sh  starting_programs.sh  strings.sh  test.sh  tmux.sh  user_input.sh  variables.sh
html/: html-export.css
(+704 files in other folders)
